# upos612-metro

./: .env.example  .gitignore  .gitnexusignore  .phpunit.result.cache  AGENTS-FAST.md  AGENTS.md  CLAUDE.md  agent-policy.local.example.md  composer.json  modules_statuses.json  phpstan.neon  readme.md  warm-and-index.bat
mcp/mcp-cyber/: .env.example  .gitignore  Dockerfile  README.md  _check_db2.py  _check_html.py  alembic.ini  docker-compose.yml  pyproject.toml
mcp/mcp-cyber/.github/workflows/: mcp-cyber-security-scan.yml
mcp/mcp-cyber/configs/: business_rules.sample.yaml  default.policy.yaml
mcp/mcp-cyber/configs/profile_templates/: enterprise_active_controlled_fuzz_approvals.v1.json
mcp/mcp-cyber/cyber_api/: __main__.py  audit.py  auth_users.py  deps.py  logging_setup.py  main.py  oidc.py  principals.py  schemas.py  security.py  settings.py  token_user.py
mcp/mcp-cyber/cyber_api/routers/: __init__.py  analytics.py  approvals.py  audit.py  (+9 more)
mcp/mcp-cyber/cyber_core/: __init__.py  logging.py
mcp/mcp-cyber/cyber_db/: models.py  session.py
mcp/mcp-cyber/cyber_engine/: __init__.py  allowlist.py  business_rules.py  normalizer.py  orchestrator.py  policy_engine.py  rate_limit.py
mcp/mcp-cyber/cyber_mcp/: __init__.py  client.py  server.py
mcp/mcp-cyber/cyber_reports/: __init__.py  analytics_format.py  checklist.py  markdown.py  openapi_diff.py  sarif.py
mcp/mcp-cyber/cyber_worker/: __init__.py  consumer.py  redis_jobs.py  suppression_check.py  tasks.py
mcp/mcp-cyber/scripts/: apply_profile_template.py  check_schema.py  quick_scan_remote.py  seed_demo.py
(+2467 files in other folders)
